--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -196,121 +196,165 @@
 
     <!-- Item Boxes -->
     <section id="itemBoxes">
-        <div class="itemContainer border">
-                <div class="slide-container swiper">
-                    <div class="slide-content">
-                        <div class="card-wrapper swiper-wrapper">
-                            <!-- CARD 1 -->
-                            <div class="card swiper-slide">
-                                <img src="assets/img/cards/1.png" alt="">
+        <div class="itemContainer">
+            <div class="slide-container swiper">
+                <div class="slide-content">
+                    <div class="card-wrapper swiper-wrapper">
+                        <!-- CARD 1 -->
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cards/1.png" alt="">
+                            <div class="boton">
+                                <button class="priceButton"><p>Php 150.00</p></button>
                             </div>
-
-                            <!-- CARD 1 -->
-                            <div class="card swiper-slide">
-                                <img src="assets/img/cards/2.png" alt="">
-                            </div>
-
-                            <!-- CARD 1 -->
-                            <div class="card swiper-slide">
-                                <img src="assets/img/cards/2.png" alt="">
-                            </div>
-
-                            <!-- CARD 1 -->
-                            <div class="card swiper-slide">
-                                <img src="assets/img/cards/2.png" alt="">
-                            </div>
-
-
                         </div>
-                    </div>
 
-                    <div class="swiper-button-next swiper-navBtn"></div>
-                    <div class="swiper-button-prev swiper-navBtn"></div>
-                    <div class="swiper-pagination"></div>
-                </div>
+                        <!-- CARD 2 -->
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cards/2.png" alt="">
+                            <div class="boton">
+                                <button class="priceButton"><p>Php 150.00</p></button>
+                            </div>
+                        </div>
 
-            </body>
+                        <!-- CARD 3 -->
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cards/3.png" alt="">
+                            <div class="boton">
+                                <button class="priceButton"><p>Php 150.00</p></button>
+                            </div>
+                        </div>
+
+                        <!-- CARD 4 -->
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cards/4.png" alt="">
+                            <div class="boton">
+                                <button class="priceButton"><p>Php 150.00</p></button>
+                            </div>
+                        </div>
+
+                        <!-- CARD 5 -->
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cards/5.png" alt="">
+                            <div class="boton">
+                                <button class="priceButton"><p>Php 150.00</p></button>
+                            </div>
+                        </div>
+
+                        <!-- CARD 6 -->
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cards/6.png" alt="">
+                            <div class="boton">
+                                <button class="priceButton"><p>Php 150.00</p></button>
+                            </div>
+                        </div>
+
+                        <!-- CARD 7 -->
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cards/7.png" alt="">
+                            <div class="boton">
+                                <button class="priceButton"><p>Php 150.00</p></button>
+                            </div>
+                        </div>
+
+                        <!-- CARD 8 -->
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cards/8.png" alt="">
+                            <div class="boton">
+                                <button class="priceButton"><p>Php 150.00</p></button>
+                            </div>
+                        </div>
 
 
-
-
-        </div>
-    </section>
-
-
-
-
-
-
-    <!-- Footer -->
-    <footer class="footer py-5">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-4">
-                    <h6 class="footer-title">Pokémon GO Live</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Leaderboard</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">News</a></li>
-                    </ul>
-                    <h6 class="footer-title mt-4">Support</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Code Redemption</a></li>
-                        <li><a href="#">Community Day Map</a></li>
-                    </ul>
-                </div>
-
-
-                <div class="col-md-4 text-center">
-                    <a href="#" class="social-icon"><i class="bi bi-youtube"></i></a>
-                    <a href="#" class="social-icon"><i class="bi bi-facebook"></i></a>
-                    <a href="#" class="social-icon"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="social-icon"><i class="bi bi-tiktok"></i></a>
-                </div>
-
-
-                <div class="col-md-4 text-end">
-                    <img src="assets/img/pokemon company.png" alt="The Pokémon Company" class="footer-logo me-2">
-                    <img src="assets/img/niantic.png" alt="Niantic" class="footer-logo">
-                    <div class="language-dropdown mt-3">
-                        <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <i class="bi bi-globe"></i> English
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" style="color: black;" href="#">English</a></li>
-                            <li><a class="dropdown-item" style="color: black;" href="#">Español</a></li>
-                            <li><a class="dropdown-item" style="color: black;" href="#">Français</a></li>
-                        </ul>
                     </div>
                 </div>
+
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+</body>
+
+
+
+
+</div>
+</section>
+
+
+
+
+
+
+<!-- Footer -->
+<footer class="footer py-5">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-4">
+                <h6 class="footer-title">Pokémon GO Live</h6>
+                <ul class="list-unstyled">
+                    <li><a href="#">Leaderboard</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">News</a></li>
+                </ul>
+                <h6 class="footer-title mt-4">Support</h6>
+                <ul class="list-unstyled">
+                    <li><a href="#">Code Redemption</a></li>
+                    <li><a href="#">Community Day Map</a></li>
+                </ul>
             </div>
 
 
-            <hr class="my-4">
-            <div class="text-center">
-                <a href="#" class="footer-link">Terms of Service</a>
-                <span class="divider">|</span>
-                <a href="#" class="footer-link">Privacy Policy</a>
-                <span class="divider">|</span>
-                <a href="#" class="footer-link">Copyright Policy</a>
-                <span class="divider">|</span>
-                <a href="#" class="footer-link">Player Guidelines</a>
+            <div class="col-md-4 text-center">
+                <a href="#" class="social-icon"><i class="bi bi-youtube"></i></a>
+                <a href="#" class="social-icon"><i class="bi bi-facebook"></i></a>
+                <a href="#" class="social-icon"><i class="bi bi-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="bi bi-tiktok"></i></a>
+            </div>
+
+
+            <div class="col-md-4 text-end">
+                <img src="assets/img/pokemon company.png" alt="The Pokémon Company" class="footer-logo me-2">
+                <img src="assets/img/niantic.png" alt="Niantic" class="footer-logo">
+                <div class="language-dropdown mt-3">
+                    <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <i class="bi bi-globe"></i> English
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" style="color: black;" href="#">English</a></li>
+                        <li><a class="dropdown-item" style="color: black;" href="#">Español</a></li>
+                        <li><a class="dropdown-item" style="color: black;" href="#">Français</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </footer>
+
+
+        <hr class="my-4">
+        <div class="text-center">
+            <a href="#" class="footer-link">Terms of Service</a>
+            <span class="divider">|</span>
+            <a href="#" class="footer-link">Privacy Policy</a>
+            <span class="divider">|</span>
+            <a href="#" class="footer-link">Copyright Policy</a>
+            <span class="divider">|</span>
+            <a href="#" class="footer-link">Player Guidelines</a>
+        </div>
+    </div>
+</footer>
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="//cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/swiper-bundle.min.js"></script>
-    <script src="//cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/script.js"></script>
-    <script src="assets/js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<script src="//cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/swiper-bundle.min.js"></script>
+<script src="//cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 
 </html>
