--- a/index.html
+++ b/index.html
@@ -146,9 +146,16 @@
 
     <!-- Featured Section -->
     <section id="featuredCarousel">
+        <div class="featuredLabelOutside">
+            <img src="assets/img/featuredtext.png" alt="">
+        </div>
         <div class="left">
             <img src="assets/img/charmanderFeatured.png" id="charmander" alt="">
+            <div class="featuredLabel">
+                <img src="assets/img/featuredtext.png" alt="">
+            </div>
         </div>
+        
         <div class="outerContainer">
             <div class="featuredCarouselContainer">
                 <div id="carouselExampleIndicators" class="carousel slide">
@@ -300,6 +307,9 @@
     <!-- PokeCoins -->
 
     <section class="pokecoinsSection" id="pokecoinsSection">
+            <div class="pokecoinsLabel">
+                <img src="assets/img/pokecoinsLabel.png" alt="">
+            </div>
         <div class="cards-container">
             
             <!-- Coins Card 1 -->
