--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <!-- Featured Section -->
     <section id="featuredCarousel">
         <div class="featuredLabelOutside">
-            <img src="assets/img/featuredtext.png" alt="">
+            <img src="assets/img/featuredtextoutside.png" alt="">
         </div>
         <div class="left">
             <img src="assets/img/charmanderFeatured.png" id="charmander" alt="">
@@ -420,16 +420,17 @@
 
     <section class="dailybundlesSection" id="dailybundlesSection">
         <div class="dailybundleslabel">
-            <img src="" alt="">
+            <img src="assets/img/dailybundlesboxes/dailybundleslabel.png" alt="">
         </div>
         <div class="cards-container">
 
-            <!-- Coins Card 1 -->
+            <!-- Daily Bundle 1 -->
             <div class="card">
                 <div class="card-content">
                     <div class="db-content" id=" dailyBundlesImgContent">
                         <div class="items">
-                            <img src="assets/img/dailybundlesboxes/bundles/bundle1.png" alt="">
+                            <img src="assets/img/dailybundlesboxes/bundles/bundle1.png" style="width: 80px;"
+                                style="width: 150px; rotate: 0deg;" alt="">
                         </div>
                         <div class="bundle-box">
                             <img src="assets/img/dailybundlesboxes/db1.png" alt="">
@@ -438,26 +439,53 @@
                     <div class="text-box">
                         <h1>EXPLORER BOX</h1>
                         <div class="card-button">
-                            <img src="assets/img/dailybundlesboxes/pokecoin.png" style="width: 30px;" alt=""> 2,507.50
+                            <img src="assets/img/dailybundlesboxes/pokecoin.png" style="width: 30px;" alt=""> 2,250
                         </div>
                     </div>
-                    
                 </div>
             </div>
-
-            <!-- Coins Card 1 -->
+            <!-- Daily Bundle 2 -->
             <div class="card">
                 <div class="card-content">
-
+                    <div class="db-content" id=" dailyBundlesImgContent">
+                        <div class="items">
+                            <img src="assets/img/dailybundlesboxes/bundles/bundle2.png"
+                                style="width: 150px; rotate: -0deg;" alt="">
+                        </div>
+                        <div class="bundle-box">
+                            <img src="assets/img/dailybundlesboxes/db2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="text-box">
+                        <h1>VOYAGER BOX</h1>
+                        <div class="card-button">
+                            <img src="assets/img/dailybundlesboxes/pokecoin.png" style="width: 30px;" alt=""> 2,200
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <!-- Coins Card 1 -->
+            <!-- Daily Bundle 3 -->
             <div class="card">
                 <div class="card-content">
-
+                    <div class="db-content" id=" dailyBundlesImgContent">
+                        <div class="items">
+                            <img src="assets/img/dailybundlesboxes/bundles/bundle3.png"
+                                style="width: 180px; rotate: -0deg;" alt="">
+                        </div>
+                        <div class="bundle-box">
+                            <img src="assets/img/dailybundlesboxes/db1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="text-box">
+                        <h1>EXPLORER BOX</h1>
+                        <div class="card-button">
+                            <img src="assets/img/dailybundlesboxes/pokecoin.png" style="width: 30px;" alt=""> 2,250
+                        </div>
+                    </div>
                 </div>
             </div>
+
+
 
 
         </div>
@@ -509,6 +537,9 @@
                     <a href="#" class="social-icon"><i class="bi bi-facebook"></i></a>
                     <a href="#" class="social-icon"><i class="bi bi-instagram"></i></a>
                     <a href="#" class="social-icon"><i class="bi bi-tiktok"></i></a>
+                    <h6 style="margin: 40px; font-style: oblique; font-family: 'Montserrat', sans-serif;">
+                        For educational purposes only and no copyright infringement is intended.
+                    </h6>
                 </div>
 
 
